# serializer version: 1
# name: TestSamtoolsFlagstatSnapshot.test_flagstat_snapshot
  dict({
    'multiqc_samtools_flagstat': dict({
      'low_quality_1': dict({
        'duplicates_failed': 0,
        'duplicates_passed': 0,
        'flagstat_total': 137147,
        'mapped_failed': 0,
        'mapped_failed_pct': nan,
        'mapped_passed': 137147,
        'mapped_passed_pct': 100.0,
        'paired in sequencing_failed': 0,
        'paired in sequencing_passed': 137147,
        'properly paired_failed': 0,
        'properly paired_failed_pct': nan,
        'properly paired_passed': 44296,
        'properly paired_passed_pct': 32.3,
        'read1_failed': 0,
        'read1_passed': 66552,
        'read2_failed': 0,
        'read2_passed': 70595,
        'singletons_failed': 0,
        'singletons_failed_pct': nan,
        'singletons_passed': 79413,
        'singletons_passed_pct': 57.9,
        'total_failed': 0,
        'total_passed': 137147,
        'with itself and mate mapped_failed': 0,
        'with itself and mate mapped_passed': 57734,
        'with mate mapped to a different chr (mapQ >= 5)_failed': 0,
        'with mate mapped to a different chr (mapQ >= 5)_passed': 668,
        'with mate mapped to a different chr_failed': 0,
        'with mate mapped to a different chr_passed': 14598,
      }),
      'low_quality_2': dict({
        'duplicates_failed': 0,
        'duplicates_passed': 0,
        'flagstat_total': 120672,
        'mapped_failed': 0,
        'mapped_failed_pct': nan,
        'mapped_passed': 120672,
        'mapped_passed_pct': 100.0,
        'paired in sequencing_failed': 0,
        'paired in sequencing_passed': 120672,
        'properly paired_failed': 0,
        'properly paired_failed_pct': nan,
        'properly paired_passed': 38796,
        'properly paired_passed_pct': 32.15,
        'read1_failed': 0,
        'read1_passed': 59601,
        'read2_failed': 0,
        'read2_passed': 61071,
        'singletons_failed': 0,
        'singletons_failed_pct': nan,
        'singletons_passed': 73210,
        'singletons_passed_pct': 60.67,
        'total_failed': 0,
        'total_passed': 120672,
        'with itself and mate mapped_failed': 0,
        'with itself and mate mapped_passed': 47462,
        'with mate mapped to a different chr (mapQ >= 5)_failed': 0,
        'with mate mapped to a different chr (mapQ >= 5)_passed': 508,
        'with mate mapped to a different chr_failed': 0,
        'with mate mapped to a different chr_passed': 10266,
      }),
      'samtools': dict({
        'duplicates_failed': 0,
        'duplicates_passed': 0,
        'flagstat_total': 11540659,
        'mapped_failed': 0,
        'mapped_failed_pct': nan,
        'mapped_passed': 11540643,
        'mapped_passed_pct': 100.0,
        'paired in sequencing_failed': 0,
        'paired in sequencing_passed': 11534294,
        'properly paired_failed': 0,
        'properly paired_failed_pct': nan,
        'properly paired_passed': 11518384,
        'properly paired_passed_pct': 99.86,
        'read1_failed': 0,
        'read1_passed': 5767147,
        'read2_failed': 0,
        'read2_passed': 5767147,
        'secondary_failed': 0,
        'secondary_passed': 6365,
        'singletons_failed': 0,
        'singletons_failed_pct': nan,
        'singletons_passed': 12,
        'singletons_passed_pct': 0.0,
        'supplementary_failed': 0,
        'supplementary_passed': 0,
        'total_failed': 0,
        'total_passed': 11540659,
        'with itself and mate mapped_failed': 0,
        'with itself and mate mapped_passed': 11534266,
        'with mate mapped to a different chr (mapQ >= 5)_failed': 0,
        'with mate mapped to a different chr (mapQ >= 5)_passed': 344,
        'with mate mapped to a different chr_failed': 0,
        'with mate mapped to a different chr_passed': 628,
      }),
      'small': dict({
        'duplicates_failed': 0,
        'duplicates_passed': 0,
        'flagstat_total': 5414,
        'mapped_failed': 0,
        'mapped_failed_pct': nan,
        'mapped_passed': 5350,
        'mapped_passed_pct': 98.82,
        'paired in sequencing_failed': 0,
        'paired in sequencing_passed': 5401,
        'properly paired_failed': 0,
        'properly paired_failed_pct': nan,
        'properly paired_passed': 5011,
        'properly paired_passed_pct': 92.78,
        'read1_failed': 0,
        'read1_passed': 2709,
        'read2_failed': 0,
        'read2_passed': 2692,
        'secondary_failed': 0,
        'secondary_passed': 13,
        'singletons_failed': 0,
        'singletons_failed_pct': nan,
        'singletons_passed': 64,
        'singletons_passed_pct': 1.18,
        'supplementary_failed': 0,
        'supplementary_passed': 0,
        'total_failed': 0,
        'total_passed': 5414,
        'with itself and mate mapped_failed': 0,
        'with itself and mate mapped_passed': 5273,
        'with mate mapped to a different chr (mapQ >= 5)_failed': 0,
        'with mate mapped to a different chr (mapQ >= 5)_passed': 81,
        'with mate mapped to a different chr_failed': 0,
        'with mate mapped to a different chr_passed': 206,
      }),
    }),
  })
# ---
# name: test_individual_flagstat_file[small.samtools12.flagstat.log.txt]
  dict({
    'multiqc_samtools_flagstat': dict({
      'small': dict({
        'duplicates_failed': 0,
        'duplicates_passed': 0,
        'flagstat_total': 5414,
        'mapped_failed': 0,
        'mapped_failed_pct': nan,
        'mapped_passed': 5350,
        'mapped_passed_pct': 98.82,
        'paired in sequencing_failed': 0,
        'paired in sequencing_passed': 5401,
        'properly paired_failed': 0,
        'properly paired_failed_pct': nan,
        'properly paired_passed': 5011,
        'properly paired_passed_pct': 92.78,
        'read1_failed': 0,
        'read1_passed': 2709,
        'read2_failed': 0,
        'read2_passed': 2692,
        'secondary_failed': 0,
        'secondary_passed': 13,
        'singletons_failed': 0,
        'singletons_failed_pct': nan,
        'singletons_passed': 64,
        'singletons_passed_pct': 1.18,
        'supplementary_failed': 0,
        'supplementary_passed': 0,
        'total_failed': 0,
        'total_passed': 5414,
        'with itself and mate mapped_failed': 0,
        'with itself and mate mapped_passed': 5273,
        'with mate mapped to a different chr (mapQ >= 5)_failed': 0,
        'with mate mapped to a different chr (mapQ >= 5)_passed': 81,
        'with mate mapped to a different chr_failed': 0,
        'with mate mapped to a different chr_passed': 206,
      }),
    }),
  })
# ---
# name: test_individual_flagstat_file[small.samtools13.flagstat.log.txt]
  dict({
    'multiqc_samtools_flagstat': dict({
      'small': dict({
        'duplicates_failed': 0,
        'duplicates_passed': 0,
        'flagstat_total': 5414,
        'mapped_failed': 0,
        'mapped_failed_pct': nan,
        'mapped_passed': 5350,
        'mapped_passed_pct': 98.82,
        'paired in sequencing_failed': 0,
        'paired in sequencing_passed': 5401,
        'properly paired_failed': 0,
        'properly paired_failed_pct': nan,
        'properly paired_passed': 5011,
        'properly paired_passed_pct': 92.78,
        'read1_failed': 0,
        'read1_passed': 2709,
        'read2_failed': 0,
        'read2_passed': 2692,
        'secondary_failed': 0,
        'secondary_passed': 13,
        'singletons_failed': 0,
        'singletons_failed_pct': nan,
        'singletons_passed': 64,
        'singletons_passed_pct': 1.18,
        'supplementary_failed': 0,
        'supplementary_passed': 0,
        'total_failed': 0,
        'total_passed': 5414,
        'with itself and mate mapped_failed': 0,
        'with itself and mate mapped_passed': 5273,
        'with mate mapped to a different chr (mapQ >= 5)_failed': 0,
        'with mate mapped to a different chr (mapQ >= 5)_passed': 81,
        'with mate mapped to a different chr_failed': 0,
        'with mate mapped to a different chr_passed': 206,
      }),
    }),
  })
# ---
